# Stellar-Project

./: .gitignore  Cargo.toml  README.md  STELLAR_FREIGHTER_INTEGRATION_GUIDE.md  package.json  pnpm-lock.yaml  railway.toml
.github/workflows/: ci-and-deploy.yml
contracts/: Cargo.toml
contracts/rewards/: Cargo.toml
contracts/rewards/src/: lib.rs  test.rs
contracts/src/: lib.rs  test.rs
frontend/: .env  .env.example  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: sw.js
frontend/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/src/app/offline/: page.tsx
frontend/src/components/: add-member-modal.tsx  connectivity-banner.tsx  create-group-modal.tsx  create-pool-modal.tsx  deposit-modal.tsx  feedback-banner.tsx  layout-shell.tsx  modal.tsx  navbar.tsx  pwa-bootstrap.tsx  search-bar.tsx  talambag-dashboard.tsx  wallet-kit-button.tsx  wallet-status-notice.tsx
frontend/src/contexts/: wallet-context.tsx
frontend/src/hooks/: use-freighter-wallet.ts  use-online-status.ts  use-wallet-kit.ts
frontend/src/lib/: cache.ts  clipboard.ts  config.ts  format.ts  freighter.ts  realtime-events.ts  rewards-client.ts  talambag-client.ts  types.ts  validators.ts  wallet-kit.ts
indexer/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml  prisma.config.ts  railway.toml  tsconfig.json
indexer/prisma/: schema.prisma
indexer/src/: config.ts  db.ts  indexer.ts  load-env.ts  normalize-event.ts  prisma.ts  request-schemas.ts  server.ts  types.ts
src/: lib.rs  test.rs
(+12 files in other folders)
