[package]
name = "talambag"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["rewards"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
talambag-rewards = { path = "rewards" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.package]
edition = "2021"

[workspace.dependencies]
soroban-sdk = "22.0.0"
